# GADES-main

./: .Rbuildignore  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  Dockerfile  NAMESPACE  RCompiler.sh  README.md  Rcompiler.sh  configure  dmath.cu  dmath.h  install.R  main.cpp  main.cu  matrixgpufunctions.cu  matrixgpufunctions.h  mtrx.R  pam50_dist_B_lung.R  test.R
.github/workflows/: ci.yml  publish.yml
R/: h5ad_reader.R  mtrx.R  test.R
cmake/: FindR.cmake
examples/: 100-1000.csv
include/: GADES.hpp
include/private/: BDCalculators.hpp  DistCalculator.hpp  MatrixReaders.hpp  MatrixWriters.hpp  SBDCalculators.hpp  lane_funcs.hpp  utils.hpp
man/: mtrx_distance.Rd  mtrx_read_kdm.Rd  process_batch.Rd  process_batch_cpu.Rd
python/: CMakeLists.txt  LICENSE  README.md  pyproject.toml
python/csrc/: api_cpu.cpp  api_gpu.cu
python/csrc/r_stubs/: R.h  Rinternals.h
python/gades/: __init__.py  _backend.py  distance.py
python/tests/: conftest.py  test_distance.py
src/: GADES.cpp  compile.cpp  dispatch.cpp  dispatch.cu  main.cpp  main.cu  pc_corr_core.cpp  pc_corr_core.cu  pc_corr_core.cuh  pc_corr_core_cpu.h  pc_linalg.cuh  pc_linalg_cpu.h  pc_runtime.cu  pc_runtime.cuh  pc_runtime_cpu.h  pcp_dispatch.cu  pcp_dispatch.cuh  register_mtrx.cu  register_mtrx_cpu.cpp  test.R
src/cmake/: FindFC.cmake
src/metrics/: cosine.cpp  cosine.cu  euclidean.cpp  euclidean.cu  kendall.cpp  kendall.cu  manhattan.cpp  manhattan.cu  pearson.cpp  pearson.cu  spearman.cpp  spearman.cu
tests/: checks.hpp  sparse_test.cpp  test.cpp  testthat.R
tests/testthat/: helper-setup.R  test-h5ad-integration.R  test-h5ad-reader.R  test-sparse-mtx-per-cell-pair.R  test-sparse-writer.R  test-spearman-per-cell-pair.R
