[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "gades"
version = "2.0.0b1"
description = "GADES: GPU-Accelerated Distance Evaluation for Single-cell data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Pavel Akhtyamov", email = "akhtyamovpavel@gmail.com" },
]
keywords = ["bioinformatics", "single-cell", "scRNA-seq", "distance-matrix", "GPU", "CUDA"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.7",
]

[project.optional-dependencies]
test = ["pytest>=7", "scanpy"]
anndata = ["anndata>=0.9", "h5py"]

[project.urls]
Homepage = "https://github.com/lab-medvedeva/Hobotnica-GPU"
Issues = "https://github.com/lab-medvedeva/Hobotnica-GPU/issues"

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
wheel.install-dir = "."
wheel.packages = ["gades"]

[tool.scikit-build.cmake.define]
CMAKE_CUDA_ARCHITECTURES = {env = "CUDA_ARCHITECTURES", default = "native"}

[tool.pytest.ini_options]
testpaths = ["tests"]
